# scripts

./: Cargo.toml  README.md
src/: lib.rs  logs.rs  run_script.rs
