[package]
name = "hermannm-scripts"
version = "0.1.0"
edition = "2021"
authors = ["hermannm"]

[dependencies]
anyhow = "1.0.83"
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
devlog-tracing = "0.1.1"
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4"] }
walkdir = "2.5.0"
